Add from - https://github.com/mgkimsal/jsclientshrinker - https://github.com/nicam/js-resize

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
 </head>
 
 <body>
-  <iframe src="jsnet/index.html" />
+  <iframe src="jsnet/index.html"></iframe>
+
+  <iframe src="jsclientshrinker/index.html"></iframe>
+
+  <iframe src="js-resize/index.html"></iframe>
 
 </body>
 </html>
