Add from http://tympanus.net/codrops/2014/10/30/resizing-cropping-images-canvas/

--- a/index.html
+++ b/index.html
@@ -29,5 +29,7 @@
   <iframe src="js-resize/index.html"></iframe>
 
   <iframe src="web-reflection/index.html"></iframe>
+
+  <iframe src="image-resize-crop-canvas/index.html"></iframe>
 </body>
 </html>
